# nightscout_tray

./: AGENTS.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: build.yml  release.yml
src/: autostart.rs  config.rs  controller.rs  dialogs.rs  icon.rs  main.rs  nightscout.rs  tray.rs
