[package]
name = "nightscout_tray"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "5"
ksni = { version = "0.3", features = ["blocking"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
