[package]
name = "nightscout_tray"
version = "0.1.0"
authors = ["NightScout Tray contributors"]
description = "KDE system tray app for NightScout glucose readings"
edition = "2024"
publish = false

[dependencies]
directories = "5"
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
ksni = { version = "0.3", features = ["blocking"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
winit = "0.30.13"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[package.metadata.deb]
depends = "$auto"
priority = "optional"
section = "utils"
copyright = "2026 NightScout Tray contributors"
extended-description = "NightScout Tray displays the latest NightScout SGV reading in the Linux system tray and provides Rust-native settings dialogs."
assets = [
    ["target/release/nightscout_tray", "usr/bin/nightscout_tray", "755"],
    ["packaging/linux/nightscout-tray.desktop", "usr/share/applications/nightscout-tray.desktop", "644"],
    ["README.md", "usr/share/doc/nightscout-tray/README.md", "644"],
]
